--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "8000:80"
     volumes:
       - ./:/var/www/html
+      - ./httpd.conf:/usr/local/apache2/conf/httpd.conf
   db:
     image: mysql
     ports:
